--- a/movies/package.json
+++ b/movies/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --import @swc-node/register/esm-register --enable-source-maps src/main.ts"
+    "start": "node --import @swc-node/register/esm-register --enable-source-maps src/main.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
